test/tests/compiler/8_loops/invalid_semantics/extra_credit/duplicate_label_in_loop.plx
pub fn main(none) i32 {
    loop .. while 1 {
        #  make sure our label-validation analysis also traverses loop bodies
        label lbl
        return 1
        label lbl
        return 2
    }
    return 0
}
